# optim

./: .gitignore
Correspondence_Oct7/Pablo2_Oct7/: CMakeLists.txt  INSTALL.txt  Pablo2_Oct7.files  Pablo2_Oct7.includes  README.txt  latest_release.txt  mergeIssues.txt  pablo_format.txt  pablo_key_commands.txt  pablo_mouse.txt  pablo_options.txt  toDoBinaryPablo.txt
Correspondence_Oct7/Pablo2_Oct7/.svn/: dir-prop-base  entries
Correspondence_Oct7/Pablo2_Oct7/.svn/text-base/: CMakeLists.txt.svn-base  releases.svn-base
Correspondence_Oct7/Pablo2_Oct7/appli/: CMakeLists.txt
Correspondence_Oct7/Pablo2_Oct7/appli/.svn/: entries
Correspondence_Oct7/Pablo2_Oct7/appli/.svn/text-base/: CMakeLists.txt.svn-base
Correspondence_Oct7/Pablo2_Oct7/appli/bin_pablo/: CMakeLists.txt  Image2Distance.cxx  main.cpp
Correspondence_Oct7/Pablo2_Oct7/appli/bin_pablo/.svn/: entries
Correspondence_Oct7/Pablo2_Oct7/appli/bin_pablo/antiAlias/: execImage2Distance.sh
Correspondence_Oct7/Pablo2_Oct7/appli/brainDeflation/: CMakeLists.txt  brainDeflationCortex.cxx  brainQuadMesh.cxx  testStereographic.cxx
Correspondence_Oct7/Pablo2_Oct7/appli/brainDeflation/.svn/: entries
Correspondence_Oct7/Pablo2_Oct7/appli/srep/: .srepTest.cxx.swp  CMakeLists.txt  GeodesicActiveContourShapePriorLevelSetImageFilter.cpp  ThinPlateSplineWarp.cxx  TranslationTransform.cpp  allPointsProcrustesTest.cpp  applyTps2NewSrep.cpp  computeMeanSrep.cpp  corrOpt.cpp  drawCrest.cpp  drawFigTwelve.cpp  drawFigure.cpp  drawObject.cpp  drawObjectWithShiftVars.cpp  drawSrep.cpp  drawSurface.cpp  main_itkCorrespondenceEvaluator.cpp  main_srepCorrespondenceEvaluation.cpp  onePlusOneOptimizer.cpp  procrustes.cpp  sampleSrepPointToVTK.cpp  showPointsCluster.cpp  srepAlignment.cxx  srepCrestTest.cxx  srepProcrustes.cpp  srepTest.cxx  tps_srep.cpp  tps_srep_multiTemplate.cpp  weightedprocrustesTest.cpp
Correspondence_Oct7/Pablo2_Oct7/appli/srep/.svn/: entries
Correspondence_Oct7/Pablo2_Oct7/cmake/: FindMATLAB (copy).cmake  FindMATLAB.cmake  UserBuildLatexDoc.cmake  UserMacros.cmake
Correspondence_Oct7/Pablo2_Oct7/cmake/.svn/: entries
Correspondence_Oct7/Pablo2_Oct7/cmake/.svn/text-base/: UserRootCMakeLists.cmake.svn-base
Correspondence_Oct7/Pablo2_Oct7/doc/.svn/: entries
Correspondence_Oct7/Pablo2_Oct7/doc/.svn/text-base/: CMakeLists.txt.svn-base  index.html.in.svn-base
Correspondence_Oct7/Pablo2_Oct7/doc/DevelopmentDoc/: classSpecification.org
Correspondence_Oct7/Pablo2_Oct7/doc/UserDocumentation/: CMakeLists.txt
Correspondence_Oct7/Pablo2_Oct7/doc/UserDocumentation/.svn/: entries
Correspondence_Oct7/Pablo2_Oct7/doc/UserDocumentation/TemplateIEEE/: bare_conf.tex
Correspondence_Oct7/Pablo2_Oct7/doc/UserDoxygen/.svn/: entries
Correspondence_Oct7/Pablo2_Oct7/doc/template_WebSite/: install.html  menu.html
Correspondence_Oct7/Pablo2_Oct7/doc/template_WebSite/.svn/: entries
Correspondence_Oct7/Pablo2_Oct7/include_ext/.svn/: entries
Correspondence_Oct7/Pablo2_Oct7/include_ext/FL/: Flvt_Edit_Cell.H
Correspondence_Oct7/Pablo2_Oct7/include_ext/FL/.svn/: entries
Correspondence_Oct7/Pablo2_Oct7/include_ext/lib_ext/.svn/: entries
Correspondence_Oct7/Pablo2_Oct7/include_ext/lib_ext/FLTK/: fltkd.lib  fltkforms.lib  fltkgl.lib  fltkimages.lib  fltkimagesd.lib  fltkjpegd.lib  fltkpng.lib  fltkzd.lib
Correspondence_Oct7/Pablo2_Oct7/include_ext/lib_ext/LAPACK/: BLASd_nowrap.lib  README.txt
Correspondence_Oct7/Pablo2_Oct7/install/.svn/: entries
Correspondence_Oct7/Pablo2_Oct7/lib/.svn/: entries
Correspondence_Oct7/Pablo2_Oct7/lib/.svn/text-base/: CMakeLists.txt.svn-base
Correspondence_Oct7/Pablo2_Oct7/lib/ImageIO/: CMakeLists.txt
Correspondence_Oct7/Pablo2_Oct7/lib/ImageIO/.svn/: entries
Correspondence_Oct7/Pablo2_Oct7/lib/ImageIO/Analyze/: Makefile  SConscript
Correspondence_Oct7/Pablo2_Oct7/lib/ImageIO/PlanIm/: SConscript
Correspondence_Oct7/Pablo2_Oct7/lib/ImageIO/include/: AllImageIO.h  ImageIO.i  ImageStruct.h  const.h  macros.h
Correspondence_Oct7/Pablo2_Oct7/lib/ImageIO/matlab/: readmedim.cpp_  writemedim.cpp_
Correspondence_Oct7/Pablo2_Oct7/lib/ImageIO/src/: AllImageIO2.cpp
Correspondence_Oct7/Pablo2_Oct7/lib/ImageIO/test/: test.dsp  test.dsw  testIO.cpp
Correspondence_Oct7/Pablo2_Oct7/lib/flvw-1.0/: CMakeLists.txt  README.UNC
Correspondence_Oct7/Pablo2_Oct7/lib/flvw-1.0/.svn/: entries
Correspondence_Oct7/Pablo2_Oct7/lib/flvw-1.0/src/: Flv_CStyle.cxx  Flv_Style.cxx
Correspondence_Oct7/Pablo2_Oct7/lib/gui/: CMakeLists.txt
Correspondence_Oct7/Pablo2_Oct7/lib/gui/.svn/: entries
Correspondence_Oct7/Pablo2_Oct7/lib/gui/src/: Fl_Aspect_Ratio_Group.cpp  LogManagerChart.cpp  OptVisualizerCallback.cpp  OptVisualizerUI.fl  OptVisualizerUIDefs.h  P3DDisplayGlobals.cpp  P3DDisplayGlobals.h  P3DUserInterface.cpp  P3DUserInterface.fl  P3DUserInterface.h  P3DUserInterfaceCallback.cpp  P3DUserInterfaceCallback.h  P3DView.cpp  Plot3DWindowWrapper.h  bp_splash.xpm  deleteUserInterface.cpp  menu.cpp  menu.h  movable_Fl_Window.cpp  movable_Fl_Window.h  shortstop.cpp
Correspondence_Oct7/Pablo2_Oct7/lib/include/: include.vcproj  swig-helpers.i
Correspondence_Oct7/Pablo2_Oct7/lib/include/.svn/: dir-prop-base  entries
Correspondence_Oct7/Pablo2_Oct7/lib/m3d/: CMakeLists.txt  M3DInterpolater.cpp
Correspondence_Oct7/Pablo2_Oct7/lib/m3d/.svn/: entries
Correspondence_Oct7/Pablo2_Oct7/lib/m3d/include/: BYU.h  Bezier1D.h  ControlFile.h  ControlParms.h  DQFImage.h  Geodesic.h  GeodesicDistanceFunction.h  Image3D.h  IntervalTimer.h  (+39 more)
Correspondence_Oct7/Pablo2_Oct7/lib/match/: CMakeLists.txt
Correspondence_Oct7/Pablo2_Oct7/lib/paul_code/: CMakeLists.txt
Correspondence_Oct7/Pablo2_Oct7/lib/planes/: CMakeLists.txt
Correspondence_Oct7/Pablo2_Oct7/lib/register/: CMakeLists.txt
Correspondence_Oct7/Pablo2_Oct7/lib/seurat/: CMakeLists.txt
Correspondence_Oct7/Pablo2_Oct7/lib/special/: special.dsp  special.dsw
Correspondence_Oct7/Pablo2_Oct7/lib/version/: CMakeLists.txt  Makefile
Correspondence_Oct7/Pablo2_Oct7/lib/vtksrep/: CMakeLists.txt  CMakeLists.txt~  itkx2uimagemap.h  itkx2uimagemap.txx
(+2199 files in other folders)
