
# USER! : Add a ADD_SUBDIRECTORY command for each one of your libraries
# -----

ADD_SUBDIRECTORY(SRepInterpolationLib)
ADD_SUBDIRECTORY(SRepLib)
ADD_SUBDIRECTORY(SRepIOLib)
ADD_SUBDIRECTORY(SRepVisualizationLib)
ADD_SUBDIRECTORY(calquantum)
ADD_SUBDIRECTORY(Correspondence)
ADD_SUBDIRECTORY(Visualization)
ADD_SUBDIRECTORY(vtkpowercrust)


